Fixed CU 862k8tt0g, text overspilling boxes. The text in the citation box is now breakable. The URL is usually too long for mobile display.

--- a/frontend/assets/css/main.scss
+++ b/frontend/assets/css/main.scss
@@ -955,3 +955,6 @@ ul.pagination-list {
 }
 
 //
+cite {
+  word-wrap: break-word;
+}
